// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LcTextBlock component SEO tag should render LcSeoTag.H1 1`] = `

<div class="lc-text-block lc-text-block_size_s16"
     style="line-height: 22px;"
>
  <div class="lc-styled-text">
    <h1 class="lc-styled-text__text">
    </h1>
  </div>
</div>

`;

exports[`LcTextBlock component SEO tag should render LcSeoTag.H2 1`] = `

<div class="lc-text-block lc-text-block_size_s16"
     style="line-height: 22px;"
>
  <div class="lc-styled-text">
    <h2 class="lc-styled-text__text">
    </h2>
  </div>
</div>

`;

exports[`LcTextBlock component SEO tag should render LcSeoTag.H3 1`] = `

<div class="lc-text-block lc-text-block_size_s16"
     style="line-height: 22px;"
>
  <div class="lc-styled-text">
    <h3 class="lc-styled-text__text">
    </h3>
  </div>
</div>

`;

exports[`LcTextBlock component SEO tag should render LcSeoTag.H4 1`] = `

<div class="lc-text-block lc-text-block_size_s16"
     style="line-height: 22px;"
>
  <div class="lc-styled-text">
    <h4 class="lc-styled-text__text">
    </h4>
  </div>
</div>

`;

exports[`LcTextBlock component SEO tag should render LcSeoTag.H5 1`] = `

<div class="lc-text-block lc-text-block_size_s16"
     style="line-height: 22px;"
>
  <div class="lc-styled-text">
    <h5 class="lc-styled-text__text">
    </h5>
  </div>
</div>

`;

exports[`LcTextBlock component SEO tag should render LcSeoTag.H6 1`] = `

<div class="lc-text-block lc-text-block_size_s16"
     style="line-height: 22px;"
>
  <div class="lc-styled-text">
    <h6 class="lc-styled-text__text">
    </h6>
  </div>
</div>

`;

exports[`LcTextBlock component SEO tag should render LcSeoTag.None 1`] = `

<div class="lc-text-block lc-text-block_size_s16"
     style="line-height: 22px;"
>
  <div class="lc-styled-text">
    <div class="lc-styled-text__text">
    </div>
  </div>
</div>

`;
